hphp/test/zend/bad/ext/standard/tests/file/symlink_link_linkinfo_is_link_error2.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
    die('skip no symlinks on Windows');
}
if (PHP_INT_SIZE != 4) {
  die("skip this test is for 32bit platform only");
}
?>